--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -9,7 +9,7 @@
   price: 1350
   price-description: per rom per natt
   saved: 47
-  expires: 2019/06/04
+  expires: 2019/06/11
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/32900/e982c4f8_7e71_4ad4_95de_bcf5411485b4.jpg
   link: https://no.secretescapes.com/lad-batteriene-paa-norefjell-norefjell-ski-and-spa-norefjell-buskerud-norge-no-no/sale
   sale-id: 94610
@@ -22,67 +22,28 @@
   price: 994
   price-description: per rom per natt
   saved: 38
-  expires: 2019/06/04
+  expires: 2019/06/11
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/48751/11007c33_f05a_46d9_bcef_971128507c1c.jpg
   link: https://no.secretescapes.com/sjarmerende-hotell-paa-frogner-clarion-collection-hotel-gabelshus-oslo-no/sale
   sale-id: 94714
   domestic: true
 
+- title: Sentralt med svømmebasseng i Oslo
+  id: sentralt-med-svømmebasseng-i-oslo
+  location: Radisson Blu Scandinavia Hotel, Oslo
+  description: Bo moderne og sentralt i Oslo – tett på sentrums muséer, teatre og attraksjoner
+  price: 1465
+  price-description: per rom per natt
+  saved: 47
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95329/a62e0a7a_d8c8_437e_8341_b45496c16189.jpg
+  link: https://no.secretescapes.com/sentralt-med-svoemmebasseng-i-oslo-radisson-blu-scandinavia-hotel-oslo/sale
+  sale-id: 95329
+  domestic: true
+
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
-
-- title: Unikt hotell med magiske rom
-  id: unikt-hotell-med-magiske-rom
-  location: Château Monfort, Milano, Italia
-  description: Femstjerners opphold i Milano, inkludert velkomstdrink og adgang til spa
-  price: 1683
-  price-description: per rom per natt
-  saved: 45
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
-  link: https://no.secretescapes.com/unikt-hotell-med-magiske-rom-chateau-monfort-milano-italia-no6/sale
-  sale-id: 93672
-  domestic: false
-
-- title: Eksklusivt boutiquehotell i Portal Nous
-  id: eksklusivt-boutiquehotell-i-portal-nous
-  location: Portals Hills Boutique Hotel, Portals Nous, Mallorca, Spania
-  description: Opphold på vakkert og moderne hotell med spa, basseng og nattklubb, inkludert frokost m.m.
-  price: 1914
-  price-description: per suite per natt
-  saved: 42
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90577/3a0e4e68_b76e_47ae_9708_b4b5c5804ae1.jpg
-  link: https://no.secretescapes.com/eksklusivt-boutiquehotell-i-portal-nous-portals-hills-boutique-hotel-portals-nous-mallorca-spania-no/sale
-  sale-id: 93893
-  domestic: false
-
-- title: Aktiv ferie på fjellet i Sverige
-  id: aktiv-ferie-på-fjellet-i-sverige
-  location: Holiday Club Åre, Åre, Sverige
-  description: Gå på tur, svøm og besøk opplevelsebadet i Åre, inkludert frokost, toretters middag som tilvalg m.m.
-  price: 1083
-  price-description: per rom per natt
-  saved: 44
-  expires: 2019/06/04
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/39416/5118d9d8_fe87_4eaf_bda2_9969e25f0ea5.jpg
-  link: https://no.secretescapes.com/aktiv-ferie-paa-fjellet-i-sverige-holiday-club-are-are-sverige-no/sale
-  sale-id: 94093
-  domestic: false
-
-- title: Strandnært med spa på Sardinia
-  id: strandnært-med-spa-på-sardinia
-  location: Àrbatax Park Resort - Suites del Mare, Àrbatax, Sardinia, Italia
-  description: Suiter på resort med spa og flere strender i naturskjønne Ogliastra, inkludert halvpensjon
-  price: 4170
-  price-description: per suite per natt
-  saved: 63
-  expires: 2019/05/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73726/960100d5_f0ce_4382_96ff_20b561324f90.jpg
-  link: https://no.secretescapes.com/strandnaert-med-spa-paa-sardinia-arbatax-park-resort-suites-del-mare-arbatax-sardinia-italia-no/sale
-  sale-id: 94519
-  domestic: false
 
 - title: Femstjerners luksus på Mallorca
   id: femstjerners-luksus-på-mallorca
@@ -90,8 +51,8 @@
   description: Luksuriøst opphold på urbant sparesort i Palma, inkludert frokost&nbsp;
   price: 1451
   price-description: per rom per natt
-  saved: 49
-  expires: 2019/06/04
+  saved: 50
+  expires: 2019/06/11
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/28477/f79209b7_d7f6_469a_8454_6fb94d56ddae.jpg
   link: https://no.secretescapes.com/femstjerners-luksus-paa-mallorca-gpro-valparaiso-palace-and-spa-palma-de-mallorca-spania2/sale
   sale-id: 95067
@@ -104,7 +65,7 @@
   price: 1023
   price-description: per rom per natt
   saved: 61
-  expires: 2019/06/04
+  expires: 2019/06/11
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/65890/b4f2cf0a_f6ea_4661_9173_bd8f2b4267ea.jpg
   link: https://no.secretescapes.com/luksurioest-golfresort-i-tidligere-kloster-i-monasteri-golf-resort-siracusa-sicilia-italia-1/sale
   sale-id: 95177
@@ -121,4 +82,95 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/74357/192483b6_5605_429d_9363_db368ad4dc60.jpg
   link: https://no.secretescapes.com/fantastiske-fitzrovia-the-mandrake-london-england-1/sale
   sale-id: 94946
+  domestic: false
+
+- title: Elegant boutiquehotell i hjertet av Madrid
+  id: elegant-boutiquehotell-i-hjertet-av-madrid
+  location: The Walt Madrid, Madrid, Spania
+  description: Stilig hotell i nærheten av fasjonable Gran Via og en rekke restauranter og spennende uteliv
+  price: 1024
+  price-description: per rom per natt
+  saved: 40
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88549/39983cf1_3d50_42af_812a_89cb00e5fa1a.jpg
+  link: https://no.secretescapes.com/elegant-boutiquehotell-i-hjertet-av-madrid-the-walt-madrid-madrid-spania-1/sale
+  sale-id: 95133
+  domestic: false
+
+- title: Familiedrøm på Mallorca
+  id: familiedrøm-på-mallorca
+  location: Fergus Club Europa, Paguera, Spania
+  description: Senk skuldrene og nyt familieferien på sports- og familiehotell tett på golfbaner og strender
+  price: 1072
+  price-description: per room per natt
+  saved: 43
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73722/bbb0bd8d_8068_468b_b1ff_dfb4200e6962.jpg
+  link: https://no.secretescapes.com/familiedroem-paa-mallorca-fergus-club-europa-paguera-spania/sale
+  sale-id: 95187
+  domestic: false
+
+- title: Stilig boutiquehotell i Stockholm
+  id: stilig-boutiquehotell-i-stockholm
+  location: NOFO Hotel, Stockholm, Sverige
+  description: Opphold på et stilig boutiquehotell i Stockholm, inkludert frokostbuffet
+  price: 1086
+  price-description: per rom per natt
+  saved: 41
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94515/250228e4_c49f_4dbb_b659_8b298e450d25.jpg
+  link: https://no.secretescapes.com/stilig-boutiquehotell-i-stockholm-nofo-hotel-stockholm-sverige-no-no/sale
+  sale-id: 94515
+  domestic: false
+
+- title: Deilig langhelg i Stockholm
+  id: deilig-langhelg-i-stockholm
+  location: Elite Palace Hotel, Stockholm, Sverige
+  description: Luksuriøst opphold i vakre Vasastan, inkludert frokost
+  price: 724
+  price-description: per rom per natt
+  saved: 34
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91573/6cff9385_179a_44a5_9493_05399d924205.jpg
+  link: https://no.secretescapes.com/deilig-langhelg-i-stockholm-elite-palace-hotel-stockholm-sverige-1/sale
+  sale-id: 94907
+  domestic: false
+
+- title: Elegant designhotell på Stureplan
+  id: elegant-designhotell-på-stureplan
+  location: Story Hotel Riddargatan, Stockholm, Sverige
+  description: Elegant og unikt designhotell på Stureplan i Stockholm, inkl. frokostbuffet
+  price: 1005
+  price-description: per rom per natt
+  saved: 34
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/62203/461d2da7_fec8_4cf0_9b3d_31f16cc3310a.jpg
+  link: https://no.secretescapes.com/elegant-designhotell-paa-stureplan-story-hotel-riddargatan-stockholm-sverige-1/sale
+  sale-id: 95328
+  domestic: false
+
+- title: Opplev Roma fra elegant hotell
+  id: opplev-roma-fra-elegant-hotell
+  location: Hotel Pulitzer Roma, Roma, Italia
+  description: Opphold med frokost på trendy hotell med stilig interiør, inkludert frokost og velkomstdrink
+  price: 871
+  price-description: per rom per natt
+  saved: 40
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/57116/189425a6_932d_4e52_8b0b_a5880b0c8e64.jpg
+  link: https://no.secretescapes.com/opplev-roma-fra-elegant-hotell-hotel-pulitzer-roma-roma-italia-1/sale
+  sale-id: 95364
+  domestic: false
+
+- title: Velvære på toppen av Toscana
+  id: velvære-på-toppen-av-toscana
+  location: Il Castelfalfi, Castelfalfi, Italia
+  description: Luksuriøs velvære på den rolige toskanske landsbygda, inkludert frokost m.m.
+  price: 2029
+  price-description: per rom per natt
+  saved: 37
+  expires: 2019/06/11
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52547/37fe61be_bc21_4bc8_be32_0bce4413b623.jpg
+  link: https://no.secretescapes.com/velvaere-paa-toppen-av-toscana-il-castelfalfi-castelfalfi-italia-1/sale
+  sale-id: 94624
   domestic: false
