--- a/_data/modals.yml
+++ b/_data/modals.yml
@@ -40,7 +40,7 @@
 
       <h4 class="core-title core-title--xs space--lg">Premietrekningen</h4>
       <ol class="continuing-list">
-        <li>For å delta i denne premietrekningen, blir deltagerne bedt om å fylle ut et kort spørreskjema mellom kl. 07.00 den 15/04/2019 (&quot;Deltakningsdato&quot;) og kl. 23.59 den 31/05/2019 (&quot;Avslutningsdato&quot;).</li>
+        <li>For å delta i denne premietrekningen, blir deltagerne bedt om å fylle ut et kort spørreskjema mellom kl. 07.00 den 15/04/2019 ("Deltakningsdato") og kl. 23.59 den 23/06/2019 ("Avslutningsdato").</li>
         <li>Ingen kjøp er nødvendig; det er gratis å delta i denne premietrekningen.</li>
         <li>Ufullstendige, ugyldige eller upassende deltakninger, eller deltakninger mottatt etter sluttdatoen, vil ikke være kvalifisert til å vinne.</li>
       </ol>
