--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -9,88 +9,10 @@
   price: 149
   price-description: por habitación por noche
   saved: 49
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/28477/f79209b7_d7f6_469a_8454_6fb94d56ddae.jpg
   link: https://es.secretescapes.com/gpro-valparaiso-palace-and-spa-mallorca-es-pa/sale
   sale-id: 95067
-  domestic: true
-
-- title: Gara Suites Golf & Spa
-  id: gara-suites-golf-and-spa
-  location: Tenerife
-  description: Media pensión en un cuatro estrellas al sur de Tenerife, con una botella de vino
-  price: 83
-  price-description: por suite por noche
-  saved: 42
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88953/4b3afadd_d23c_4fd8_a220_32caf459a489.jpg
-  link: https://es.secretescapes.com/gara-suites-golf-and-spa-tenerife-es-es/sale
-  sale-id: 94218
-  domestic: true
-
-- title: Club Maspalomas Suites & Spa
-  id: club-maspalomas-suites-and-spa
-  location: Gran Canaria
-  description: Media pensión en un complejo de cuatro estrellas solo para adultos en Gran Canaria
-  price: 125
-  price-description: por suite por noche
-  saved: 29
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/82821/cb58c3db_64b2_4488_9e78_9178d1cee41d.jpg
-  link: https://es.secretescapes.com/club-maspalomas-suites-and-spa-gran-canaria-esp-es/sale
-  sale-id: 94249
-  domestic: true
-
-- title: Suites Albayzín del Mar
-  id: suites-albayzín-del-mar
-  location: Almuñécar, Granada
-  description: Media pensión en un apartamento de dos dormitorios en la costa de Almuñécar, con extras
-  price: 128
-  price-description: por apartamento por noche
-  saved: 42
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94300/8e1efa37_975e_428f_a111_03ef5b323b9c.jpg
-  link: https://es.secretescapes.com/suites-albayzin-del-mar-almunecar-granada-es-pa/sale
-  sale-id: 94300
-  domestic: true
-
-- title: The Gates Diagonal Barcelona
-  id: the-gates-diagonal-barcelona
-  location: Barcelona
-  description: Un fabuloso cuatro estrellas en plena Diagonal de Barcelona, con desayuno y bebida de bienvenida
-  price: 89
-  price-description: por habitación por noche
-  saved: 52
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/86981/8e234893_246c_4375_82a5_bc24a59e3330.jpg
-  link: https://es.secretescapes.com/the-gates-hotel-diagonal-barcelona-barcelona-es-pa/sale
-  sale-id: 94489
-  domestic: true
-
-- title: The Walt Madrid
-  id: the-walt-madrid
-  location: Madrid
-  description: Un hotel con estilo en pleno centro de Madrid, con desayuno y una bebida de bienvenida
-  price: 105
-  price-description: por habitación por noche
-  saved: 40
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88549/39983cf1_3d50_42af_812a_89cb00e5fa1a.jpg
-  link: https://es.secretescapes.com/the-walt-madrid-madrid-es-p/sale
-  sale-id: 95133
-  domestic: true
-
-- title: Fergus Club Europa
-  id: fergus-club-europa
-  location: Mallorca
-  description: Todo incluido en un hotel boutique en una tranquila zona de Mallorca, con varios extras
-  price: 110
-  price-description: por habitación por noche
-  saved: 43
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73722/bbb0bd8d_8068_468b_b1ff_dfb4200e6962.jpg
-  link: https://es.secretescapes.com/fergus-club-europa-mallorca-es-pa/sale
-  sale-id: 95187
   domestic: true
 
 - title: Finca Serena Mallorca
@@ -100,28 +22,54 @@
   price: 224
   price-description: por habitación por noche
   saved: 41
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95288/a341a4fe_7288_4354_bdc6_aed5811df353.jpg
   link: https://es.secretescapes.com/finca-serena-mallorca-mallorca-es/sale
   sale-id: 95288
   domestic: true
 
+- title: Hospes Palau de la Mar
+  id: hospes-palau-de-la-mar
+  location: Valencia
+  description: Un hotel de cinco estrellas en el centro de Valencia, con desayuno, spa y varios extras
+  price: 143
+  price-description: por habitación por noche
+  saved: 35
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/6984/b670907a_c729_4a32_9196_83dd2cf49d48.jpg
+  link: https://es.secretescapes.com/hospes-palau-de-la-mar-valencia21/sale
+  sale-id: 95372
+  domestic: true
+
+- title: Lobby Room Sevilla
+  id: lobby-room-sevilla
+  location: Sevilla
+  description: Un cuatro estrellas de diseño en el centro de Sevilla, con desayuno y extras
+  price: 120
+  price-description: por habitación por noche
+  saved: 31
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95966/e5d76351_a98e_48c8_bed8_ae756dfcf60c.jpg
+  link: https://es.secretescapes.com/lobby-room-sevilla-sevilla-es/sale
+  sale-id: 95966
+  domestic: true
+
+- title: Hotel Jazz
+  id: hotel-jazz
+  location: Barcelona
+  description: Un hotel vanguardista en Barcelona, con una bebida de bienvenida y descuento en el desayuno
+  price: 97
+  price-description: por habitación por noche
+  saved: 42
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/81186/0e10b7f2_7420_4eec_abc8_5dce092a078f.jpg
+  link: https://es.secretescapes.com/hotel-jazz-barcelona-espa/sale
+  sale-id: 95997
+  domestic: true
+
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
-
-- title: Laguna Resort Vilamoura
-  id: laguna-resort-vilamoura
-  location: Algarve (Vilamoura, Portugal)
-  description: Tranquilidad y lujo en este complejo de apartamentos en Vilamoura. Incluye desayuno
-  price: 35
-  price-description: por apartamento por noche
-  saved: 47
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/89458/a3c87639_7a84_437a_89c5_ac5ed203b400.jpg
-  link: https://es.secretescapes.com/laguna-resort-vilamoura-algarve-vilamoura-portugal-esp-es/sale
-  sale-id: 95065
-  domestic: false
 
 - title: Amendoeira Golf Resort
   id: amendoeira-golf-resort
@@ -130,23 +78,10 @@
   price: 90
   price-description: por apartamento por noche
   saved: 64
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/31715/50f1e0a7_bc88_4306_9944_0219cec9114f.jpg
   link: https://es.secretescapes.com/amendoeira-golf-resort-alcantarilha-portugal-es-es/sale
   sale-id: 95542
-  domestic: false
-
-- title: NOFO Hotel
-  id: nofo-hotel
-  location: Estocolmo
-  description: Un cuatro estrellas en Estocolmo, con desayuno incluido y más
-  price: 111
-  price-description: por habitación por noche
-  saved: 41
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94515/250228e4_c49f_4dbb_b659_8b298e450d25.jpg
-  link: https://es.secretescapes.com/nofo-hotel-estocolmo-es/sale
-  sale-id: 94515
   domestic: false
 
 - title: Story Hotel Riddargatan
@@ -156,7 +91,7 @@
   price: 103
   price-description: por habitación por noche
   saved: 34
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/62203/461d2da7_fec8_4cf0_9b3d_31f16cc3310a.jpg
   link: https://es.secretescapes.com/story-hotel-riddargatan-estocolmo-es-pa/sale
   sale-id: 95328
@@ -169,8 +104,34 @@
   price: 89
   price-description: por habitación por noche
   saved: 40
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/57116/189425a6_932d_4e52_8b0b_a5880b0c8e64.jpg
   link: https://es.secretescapes.com/hotel-pulitzer-roma-roma-es-pa/sale
   sale-id: 95364
+  domestic: false
+
+- title: New Road Hotel
+  id: new-road-hotel
+  location: Londres
+  description: Un estiloso hotel boutique al este de Londres, con desayuno inglés
+  price: 101
+  price-description: por habitación por noche
+  saved: 36
+  expires: 2019/06/19
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95863/8077a4f0_e9e3_4544_a46c_2baff9ed2cef.jpg
+  link: https://es.secretescapes.com/new-road-hotel-londres-es/sale
+  sale-id: 95863
+  domestic: false
+
+- title: Elite Hotel Carolina Tower
+  id: elite-hotel-carolina-tower
+  location: Solna, Estocolmo
+  description: Simplicidad y diseño en un hotel moderno muy cerca de Estocolmo, con desayuno incluido
+  price: 75
+  price-description: por habitación por noche
+  saved: 41
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/64357/fd69d8b8_4cf3_44fe_93e1_97006f72d151.jpg
+  link: https://es.secretescapes.com/elite-hotel-carolina-tower-solna-estocolmo-es-pa/sale
+  sale-id: 95634
   domestic: false
